nodered/nodered-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nodered
  name: nodered
  namespace: homeautomation
spec:
  ports:
  - port: 1880
    protocol: TCP
    targetPort: 1880
  selector:
    app: nodered
status:
  loadBalancer: {}
